# ET-Sat

./: .gitignore  CMakeLists.txt  CMakeListsOld.txt  Data_Posting.py  Data_postingREADME.txt  Health_And_Safety.c  Health_And_Safety.h  README.md  helloWorld.c  main.c  main.h  tatus  typedef.h  virusSensor.c  virusSensor.h
Health_Safety_Check/: health_safety_check.c  health_safety_check.h
IR_Protocol/: IR_Protocol.c  IR_Protocol.h  IR_Protocol_sendBits.c  IR_Protocol_sendBits.h
Main/: main.c  main.h
MainTests/: mainTest.c  mainTest.h
Recovery_Modes/: MFM.c  MFM.h
Sensors/: Em_Sensor.c  Em_Sensor.h  Light_Sensor.c  Light_Sensor.h  Rotation_Sensor.c  Rotation_Sensor.h  Tether_Communication_Sensor'.c  Tether_Communication_Sensor'.h  Time_Watch.c  Time_Watch.h
image_compression/: a.out  cips.h  compress.h  dumpi.c  omit.c  test.c
io/: io.c  io.h
mode_LVSM/: LVSM.c  LVSM.h
mode_PLM/: PLM.c  PLM.h
mode_SCM/: SCM.c  SCM.h  data_string.h
mode_SMM/: SMM.c  SMM.h
mode_TMM/: TMM.c  TMM.h
mqtt_library/: MQTTCommands.txt
nsl_comm/: Data_Posting.py  MQTT.txt  MQTTClient.h  MQTTClientPersistence.h  a.out  nslComm.c  nslComm.h  nslCommTest.c  nslCommTest.h  nsl_connection.c  nsl_connection.h
systmr/: systmr.c  systmr.h
timer0/: timer0.c  timer0.h
timer1/: timer1.c  timer1.h
timer3/: timer3.c  timer3.h
typedef/: typedef.h
